# pyreqwest

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md
python/pyreqwest/: __init__.py  types.py
python/pyreqwest/client/: __init__.pyi
python/pyreqwest/logging/: _internal.py
python/pyreqwest/middleware/wsgi/: __init__.py  wsgi.py
python/pyreqwest/request/: __init__.pyi
python/pyreqwest/response/: __init__.pyi
python/pyreqwest/runtime/: __init__.pyi
scripts/: bench.sh
src/: lib.rs
src/client/: client.rs  client_builder.rs
src/client/internal/: spawner.rs
src/exceptions/: exceptions.rs
src/http/: url.rs
src/http/header_map/: header_map.rs
src/internal/: body_stream.rs  types.rs  utils.rs
src/logging/: logger.rs
src/request/: request.rs  request_builder.rs
src/response/: response.rs  response_builder.rs
src/response/internal/: body_reader.rs
src/runtime/: runtime.rs
tests/: runtime_isolated_test.py  test_client.py  test_examples.py  test_header_map.py  test_logging.py  test_middleware.py  test_middleware_wsgi_client.py  test_request_builder.py  test_runtime.py  test_stream.py  utils.py
tests/bench/: latency.py  plots.py  runner.py  utils.py
tests/servers/: echo_server.py  server.py  server_pool.py  server_subprocess.py
