[package]
name = "pyreqwest"
version = "0.11.2"
edition = "2024"

[lib]
name = "pyreqwest"
crate-type = ["cdylib"]

[dependencies.reqwest]
version = "=0.13.2"
default-features = false
features = [
    "rustls",
    "http2",
    "query",
    "multipart",
    "form",
    "cookies",
    "stream",
    "socks",
    "gzip",
    "zstd",
    "brotli",
    "deflate",
]

[dependencies]
pyo3 = { version = "=0.28.2", features = ["extension-module", "experimental-async", "time", "generate-import-lib"] }
pyo3-bytes = "=0.6.0"
pythonize = "=0.28.0"
hyper = { version = "=1.8.1", features = ["client", "http1", "http2"] }
rustls = "=0.23.37"
http = "=1.4.0"
tokio = { version = "=1.49.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-util = "=0.7.18"
futures-util = "=0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_urlencoded = "=0.7.1"
bytes = "=1.11.1"
url = { version = "=2.5.8", features = ["serde"] }
mime = "=0.3.17"
cookie = "=0.18.1"
cookie_store = { version = "=0.22.1", features = ["preserve_order"] }
encoding_rs = "=0.8.35"
http-body-util = "=0.1.3"
pin-project = "=1.1.11"
time = "=0.3.47"
regex = "=1.12.3"
log = "=0.4.29"
mimalloc = { version = "0.1.48", default-features = false, features = ["local_dynamic_tls", "v3"], optional = true }

[build-dependencies]
pyo3-build-config = "=0.28.2"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.profiling]
inherits = "release"
lto = "thin"
strip = false
debug = true

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
